--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "release": "node scripts/release.js"
   },
   "dependencies": {
+    "vue-cute-timeline": "^1.2.8",
     "vuepress": "^1.2.0",
     "yarn": "^1.21.1"
   },
