--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "node ./builds/delMarkdown.js && node ./builds/addMarkdown.js && vuepress build docs",
+    "build": "node ./builds/addMarkDownIfNotExist.js && vuepress build docs",
     "delcomment": "node ./builds/delMarkdown.js",
     "lint": "prettier --write 'docs/**/*.md'",
     "release": "node scripts/release.js"
