--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "release": "node scripts/release.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "element-ui": "^2.13.0",
     "vue-cute-timeline": "^1.2.8",
     "vuepress": "^1.2.0",
